feat(wildfire-mit): new pdf one sheeter

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -71,7 +71,7 @@
 				chainsaws on dry days, no drones on windy days.)
 			</p>
 			<p>
-				<a href="https://tristate.coop/sites/default/files/PDF/resources/2025%20TS%20Wildfire%20Mitigation%201-Sheeter.pdf"
+				<a href="https://tristate.coop/sites/default/files/PDF/resources/0925%20Wildfire%20Mitigation%201-Sheeter%20FNL.pdf"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-white px-4 py-2 font-normal text-white no-underline transition-transform">
 					<img src="https://tristate.coop/sites/default/files/images/icons/button-download-arrow.svg"
 						alt="down arrow" class="h-4" />
