wip: fix OBR container height handling
- Remove fixed height from data-zoho-container HTML element
- Add h-full Tailwind class to allow proper GSAP animation
- Container now starts at 0 height and animates to 1200px target
- Eliminates conflicting height declarations between HTML and JS

--- a/obr.htm
+++ b/obr.htm
@@ -255,8 +255,7 @@
 			</div>
 		</div>
 		<div class="col-start-1 row-start-1 relative">
-			<div class="absolute w-full top-full" style="background-color: #F5F5F5; height: 1200px;"
-				data-zoho-container>
+			<div class="absolute w-full top-full h-full" style="background-color: #F5F5F5;" data-zoho-container>
 
 			</div>
 
