Update modal max-width to screen-lg
- Change from max-w-2xl to max-w-screen-lg for better form display
- Provides more horizontal space for cleanenergy.finance forms
- Modal now uses w-[95vw] with max-w-screen-lg constraint

--- a/obr.htm
+++ b/obr.htm
@@ -609,7 +609,7 @@
 
 	<!-- OBR Form Modal -->
 	<dialog id="obr-modal"
-		class="backdrop:bg-black/75 bg-white rounded-lg shadow-xl max-w-5xl max-h-[90vh] w-[90vw] h-[80vh] p-0 m-auto">
+		class="backdrop:bg-black/75 bg-white rounded-lg shadow-xl max-w-screen-lg w-[95vw] h-[95vh] p-0 m-auto">
 		<div class="relative w-full h-full">
 			<!-- Close button -->
 			<button id="obr-modal-close"
