feat(obr): convert peek section to static display with updated assets
- update form intro section padding (pb-4 to pb-8) for better spacing
- replace form screenshot images with local OneEthos assets:
  - desktop: obr-oneethos-desktop-v1.png
  - mobile: obr-oneethos-mobile-v1.png
- add rounded-3xl styling to screenshot images for modern appearance
- set static clip-path on triangle elements to maintain visual design
- remove animation dependencies while preserving original layout structure

Client feedback: keep existing visual elements static instead of animated

--- a/obr.htm
+++ b/obr.htm
@@ -158,7 +158,7 @@
 	</section>
 
 	<!-- Form Intro -->
-	<section class="px-8 pb-4 pt-20 text-center sm:grid sm:place-content-center" style="background-color: #F5F5F5;"
+	<section class="px-8 pb-8 pt-20 text-center sm:grid sm:place-content-center" style="background-color: #F5F5F5;"
 		id="form-intro">
 		<div class="max-w-xl space-y-4">
 			<div class="mb-4 md:col-start-1 md:row-start-1">
@@ -220,18 +220,20 @@
 						d="M256 0c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32zM0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32zM120.2 75C107.7 62.5 87.5 62.5 75 75s-12.5 32.8 0 45.3l45.3 45.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L120.2 75z">
 					</path>
 				</svg></div>
-			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/form-desktop.png" alt=""
-				class="absolute w-4/5 h-auto max-w-3xl hideme md:block" data-screenshot />
-			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/form-mobile.png" alt=""
-				class="absolute w-4/5 h-auto md:hideme" data-screenshot />
+			<img src="./assets/images/obr-oneethos-desktop-v1.png" alt=""
+				class="absolute rounded-3xl w-4/5 h-auto max-w-3xl hideme md:block" data-screenshot />
+			<img src="./assets/images/obr-oneethos-mobile-v1.png" alt=""
+				class="absolute rounded-3xl w-4/5 h-auto md:hideme" data-screenshot />
 		</div>
 		<!-- Middle Layer: Green triangle -->
 		<div class="col-start-1 row-start-1 relative" data-peek-content>
-			<div class="absolute h-full w-full bottom-0 bg-green opacity-90 md:hideme" data-triangle>
+			<div class="absolute h-full w-full bottom-0 bg-green opacity-90 md:hideme"
+				style="clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
 				<div class="absolute top-0 right-0 bg-connections-r bg-right w-6 h-full bg-repeat-y opacity-45">
 				</div>
 			</div>
-			<div class="hideme absolute h-full w-full bottom-0 bg-green opacity-90 md:block" data-triangle>
+			<div class="hideme absolute h-full w-full bottom-0 bg-green opacity-90 md:block"
+				style="clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
 				<div class="absolute top-0 right-0 bg-connections-r bg-right w-32 h-full bg-repeat-y opacity-45"
 					style="background-size: 100%; auto;">
 				</div>
