--- a/obr.htm
+++ b/obr.htm
@@ -208,11 +208,10 @@
 
 
 	<!-- Peek -->
-	<section class="grid overflow-hidden" style="background-color: #F5F5F5;" data-peek>
+	<section class="grid overflow-hidden" style="background-color: #F5F5F5;">
 		<!-- Background Layer: Form screenshot -->
-		<div class="relative col-start-1 row-start-1 flex justify-center overflow-hidden" data-peek-content>
-			<div class="size-8 mt-8 loading-spinner" data-loading=""><svg viewBox="0 0 512 512"
-					xmlns="http://www.w3.org/2000/svg">
+		<div class="relative col-start-1 row-start-1 flex justify-center overflow-hidden">
+			<div class="size-8 mt-8 loading-spinner"><svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 					<path class="fa-secondary"
 						d="M65.6 414.4c0 8.2 3.1 16.4 9.4 22.6c12.5 12.5 32.8 12.5 45.3 0l45.3-45.3c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L75 391.8c-6.2 6.2-9.4 14.4-9.4 22.6zM224 416l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32s-32 14.3-32 32zM346.5 120.2c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L437 120.2c12.5-12.5 12.5-32.8 0-45.3c-6.2-6.2-14.4-9.4-22.6-9.4s-16.4 3.1-22.6 9.4l-45.3 45.3zm0 226.3c-12.5 12.5-12.5 32.8 0 45.3L391.8 437c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-45.3-45.3c-12.5-12.5-32.8-12.5-45.3 0zM384 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32z"
 						opacity=".4"></path>
@@ -221,19 +220,19 @@
 					</path>
 				</svg></div>
 			<img src="./assets/images/obr-oneethos-desktop-v1.png" alt=""
-				class="absolute rounded-3xl w-4/5 h-auto max-w-3xl hideme md:block" data-screenshot />
+				class="absolute rounded-3xl w-4/5 h-auto max-w-3xl hideme md:block" />
 			<img src="./assets/images/obr-oneethos-mobile-v1.png" alt=""
-				class="absolute rounded-3xl w-4/5 h-auto md:hideme" data-screenshot />
+				class="absolute rounded-3xl w-4/5 h-auto md:hideme" />
 		</div>
 		<!-- Middle Layer: Green triangle -->
-		<div class="col-start-1 row-start-1 relative" data-peek-content>
+		<div class="col-start-1 row-start-1 relative">
 			<div class="absolute h-full w-full bottom-0 bg-green opacity-90 md:hideme"
-				style="clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
+				style="clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);">
 				<div class="absolute top-0 right-0 bg-connections-r bg-right w-6 h-full bg-repeat-y opacity-45">
 				</div>
 			</div>
 			<div class="hideme absolute h-full w-full bottom-0 bg-green opacity-90 md:block"
-				style="clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
+				style="clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);">
 				<div class="absolute top-0 right-0 bg-connections-r bg-right w-32 h-full bg-repeat-y opacity-45"
 					style="background-size: 100%; auto;">
 				</div>
@@ -241,26 +240,20 @@
 		</div>
 
 		<!-- Top Layer: Content that sets height -->
-		<div class="col-start-1 row-start-1 flex justify-end relative overflow-hidden" data-peek-content>
+		<div class="col-start-1 row-start-1 flex justify-end relative overflow-hidden">
 			<div class="w-1/2 pr-8 flex flex-col justify-center items-end text-center space-y-6 md:w-3/5">
 				<!-- Blue badge -->
 				<div class="my-4 flex-shrink-0">
 					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/obr-badge-full-white.svg"
-						alt="" class=" mr-12" data-cta-badge />
+						alt="" class=" mr-12" />
 				</div>
 
 				<!-- Phone CTA -->
-				<div class="text-center hideme md:flex md:items-center md:gap-2" data-cta-text>
+				<div class="text-center hideme md:flex md:items-center md:gap-2">
 					<div class="text-xs font-semibold uppercase tracking-wide">HAVE A QUESTION? CALL US:</div>
 					<div class="font-serif text-xl font-bold mt-1">720-263-2313</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-start-1 row-start-1 relative">
-			<div class="absolute w-full top-full h-full" style="background-color: #F5F5F5;" data-zoho-container>
-
-			</div>
-
 		</div>
 	</section>
 
