feat(wildfire-lp): update video content and fix resource grid layout
- Add actual YouTube video (dOd5cQ3wD44) replacing placeholder URLs
- Update video thumbnail to use processed mora-video-cover-900x600.jpg
- Fix additional resources grid from 4-column to 3-column layout
- Remove placeholder Interactive Red Flag Map resource
- Improve responsive grid spacing and max-width constraints

--- a/wildfire-lp.htm
+++ b/wildfire-lp.htm
@@ -178,10 +178,9 @@
 								wildfire risk.
 							</figcaption>
 						</figure>
-
-						<a href="https://www.youtube.com/embed/#" data-featherlight="iframe"
+						<a href="https://www.youtube.com/embed/dOd5cQ3wD44" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-							data-featherlight-iframe-width="500" class="relative z-10 cursor-help">
+							data-featherlight-iframe-width="500" class="relative z-10">
 							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 								alt="Play button" class="size-44" />
 						</a>
@@ -193,7 +192,7 @@
 					<div class="grid size-full place-content-center">
 
 						<figure class="absolute size-full object-cover">
-							<img src="https://tristate.coop/sites/default/files/images/video-placeholder.png" />
+							<img src="https://tristate.coop/sites/default/files/images/mora-video-cover-900x600.jpg" />
 							<figcaption
 								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
 								Mora-San Miguel Electric Cooperative deals with the aftermath of the Calf Canyon/Hermits
@@ -201,9 +200,9 @@
 							</figcaption>
 						</figure>
 
-						<a href="https://www.youtube.com/embed/#" data-featherlight="iframe"
+						<a href="https://www.youtube.com/embed/dOd5cQ3wD44" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-							data-featherlight-iframe-width="500" class="relative z-10 cursor-help">
+							data-featherlight-iframe-width="500" class="relative z-10">
 							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 								alt="Play button" class="size-44" />
 						</a>
@@ -273,7 +272,7 @@
 
 
 		</div>
-		<div class="grid gap-y-16 gap-x-8 sm:grid-cols-2 xl:grid-cols-4">
+		<div class="grid gap-y-16 gap-x-12 max-w-screen-lg xl:grid-cols-3">
 			<!-- Resource 1 -->
 			<div class="text-center space-y-4">
 				<p><a href="https://tristate.coop/wildfire-mitigation"
@@ -295,21 +294,6 @@
 				<p class="text-sm">Learn how we responsibly manage vegetation in our right-of-ways to help minimize
 					risks from trees and vegetation that
 					could interfere with our transmission lines.</p>
-			</div>
-
-			<!-- Resource 3 -->
-			<div class="text-center space-y-4">
-				<p><a href="#"
-						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform cursor-help">Interactive
-						Red Flag Map</a>
-				</p>
-
-				<p class="text-sm text-pink-600">Please provide approximately 50
-					words about the issues identified,
-					rough estimate of miles if
-					appropriate, and any special
-					concerns / equipment / methods
-					about the project.</p>
 			</div>
 
 			<!-- Resource 4 -->
