feat(obr): full urls for new images

--- a/obr.htm
+++ b/obr.htm
@@ -219,10 +219,10 @@
 						d="M256 0c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32zM0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32zM120.2 75C107.7 62.5 87.5 62.5 75 75s-12.5 32.8 0 45.3l45.3 45.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L120.2 75z">
 					</path>
 				</svg></div>
-			<img src="./assets/images/obr-oneethos-desktop-v1.png" alt=""
-				class="absolute rounded-3xl w-4/5 h-auto max-w-3xl hideme md:block" />
-			<img src="./assets/images/obr-oneethos-mobile-v1.png" alt=""
-				class="absolute rounded-3xl w-4/5 h-auto md:hideme" />
+			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/obr-oneethos-desktop-v1.png"
+				alt="" class="absolute rounded-3xl w-4/5 h-auto max-w-3xl hideme md:block" />
+			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/obr-oneethos-mobile-v1.png"
+				alt="" class="absolute rounded-3xl w-4/5 h-auto md:hideme" />
 		</div>
 		<!-- Middle Layer: Green triangle -->
 		<div class="col-start-1 row-start-1 relative">
