feat(wildfire-lp): full image paths

--- a/wildfire-lp.htm
+++ b/wildfire-lp.htm
@@ -34,7 +34,8 @@
 <body id="main">
 	<!-- Hero -->
 	<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[400px] lg:min-h-0">
-		<img src="assets/images/lee-fire-2-1200x400.png" alt="Power lines running through mountain landscape"
+		<img src="https://tristate.coop/sites/default/files/images/lee-fire-2-1200x400.png"
+			alt="Power lines running through mountain landscape"
 			class="absolute inset-0 w-full h-full object-cover z-0" />
 		<div class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none [text-wrap:balance]">
 			<h1 class="text-4xl md:text-5xl font-serif text-balance">Combating wildfire risk</h1>
@@ -67,8 +68,8 @@
 	<section class="min-h-96 bg-navy text-center text-white lg:grid lg:grid-cols-2 lg:text-left">
 		<div class="relative aspect-square md:aspect-video lg:aspect-auto">
 			<figure class="absolute size-full">
-				<img src="assets/images/lee-fire-1-900x600.png" alt="Wildfire Modeling"
-					class="absolute left-0 size-full object-cover" />
+				<img src="https://tristate.coop/sites/default/files/images/lee-fire-1-900x600.png"
+					alt="Wildfire Modeling" class="absolute left-0 size-full object-cover" />
 				<figcaption
 					class="absolute bottom-0 w-full !border-0 bg-black bg-opacity-50 p-6 text-white text-center">
 					2025 Lee Fire burning near substation in Meeker, CO
@@ -88,7 +89,8 @@
 			<p>
 				<a href="https://tristate.coop/podcast-western-watts-zombies-tornadoes-and-wildfires"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-white px-4 py-2 font-normal text-white no-underline transition-transform">
-					<img src="assets/svg/microphone-solid-full-white.svg" alt="audio icon" class="h-6" />
+					<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full-white.svg"
+						alt="audio icon" class="h-6" />
 					Lee Fire Podcast Episode
 				</a>
 			</p>
@@ -125,7 +127,8 @@
 
 				<a href="https://tristate.coop/podcast-western-watts-wildfire-mitigation-curtis-hartenstine-tri-state"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">
-					<img src="assets/svg/microphone-solid-full.svg" alt="audio icon" class="h-6" />
+					<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full.svg"
+						alt="audio icon" class="h-6" />
 					Wildfire Mitigation Program Podcast
 				</a>
 			</p>
@@ -170,7 +173,7 @@
 					<div class="grid size-full place-content-center">
 
 						<figure class="absolute size-full object-cover">
-							<img src="/assets/images/high-plains-video-900x506.jpg" />
+							<img src="https://tristate.coop/sites/default/files/images/high-plains-video-900x506.jpg" />
 							<figcaption
 								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
 								After years of careful planning, High Plains Power Electric Cooperative buries powerline
@@ -238,7 +241,7 @@
 					<div class="grid size-full place-content-center">
 
 						<figure class="absolute size-full object-cover">
-							<img src="assets/images/smpa-video-900x600.png" />
+							<img src="https://tristate.coop/sites/default/files/images/smpa-video-900x600.png" />
 							<figcaption
 								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
 								San-Miguel Power Association, the Telluride Fire Department and Pano AI teamed up to
