feat(wildfire-lp): various fixes
- fix youtube id
- max-w on resources
- remove help cursor on link

--- a/wildfire-lp.htm
+++ b/wildfire-lp.htm
@@ -181,7 +181,7 @@
 								wildfire risk.
 							</figcaption>
 						</figure>
-						<a href="https://www.youtube.com/embed/dOd5cQ3wD44" data-featherlight="iframe"
+						<a href="https://www.youtube.com/embed/XJELzXHRmAw" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 							data-featherlight-iframe-width="500" class="relative z-10">
 							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
@@ -275,7 +275,7 @@
 
 
 		</div>
-		<div class="grid gap-y-16 gap-x-12 max-w-screen-lg xl:grid-cols-3">
+		<div class="grid gap-y-16 gap-x-12 max-w-md mx-auto xl:max-w-screen-lg xl:grid-cols-3">
 			<!-- Resource 1 -->
 			<div class="text-center space-y-4">
 				<p><a href="https://tristate.coop/wildfire-mitigation"
@@ -302,7 +302,7 @@
 			<!-- Resource 4 -->
 			<div class="text-center space-y-4">
 				<p><a href="https://tristate.coop/protecting-your-home-year-round-wildfires"
-						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform cursor-help">Home
+						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">Home
 						Wildfire Safety</a>
 				</p>
 
