fix(erp): remove erp links

--- a/our-energy-mix-v2.htm
+++ b/our-energy-mix-v2.htm
@@ -72,11 +72,6 @@
 							clean and affordable
 							as possible.</p>
 
-						<p><a class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray"
-								href="/erp">Learn how we plan </a></p>
-
-
-
 						<h2 class="font-serif font-light text-3xl pt-10">Pooling Our Resources</h2>
 						<p>By <a href="/benefits-spp-rto-west-participation-highlighted-filing-copuc">expanding
 								participation in the
@@ -131,7 +126,11 @@
 								generation
 								is how we maintain reliability.
 							</p>
-
+							<p>
+								<a class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray"
+									href="https://tristate.coop/battery-storage">Learn about
+									utility-scale batteries</a>
+							</p>
 						</div>
 					</div>
 				</section>
