fix(energy-mix): image path and cleanup

--- a/our-energy-mix-v2.htm
+++ b/our-energy-mix-v2.htm
@@ -48,8 +48,7 @@
 					<img src="https://tristate.coop/sites/default/files/images/worker-inspecting-machinery.jpg"
 						alt="Worker worker inspecting machinery"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
-					<div
-						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
+					<div class="relative text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 						<h1 class="text-4xl md:text-5xl font-serif text-balance">
 							Strength in a<br>
 							diverse energy mix
@@ -195,8 +194,8 @@
 				<!-- Moving -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="relative aspect-video sm:aspect-auto">
-						<img src="assets/images/escalante-solar-2-800x600.jpg" alt="Escalante Solar facility"
-							class="absolute inset-0 w-full h-full object-cover" />
+						<img src="https://tristate.coop/sites/default/files/images/escalante-solar-2-800x600.jpg"
+							alt="Escalante Solar facility" class="absolute inset-0 w-full h-full object-cover" />
 					</div>
 					<div class="bg-gray text-black px-8 py-12 sm:text-left text-center flex items-center h-full">
 						<div class="space-y-4 max-w-md mx-auto">
@@ -765,10 +764,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="./assets/js/charts.js"></script>
 	<script src="./assets/js/map-energy-mix.js"></script>
-	<script
-		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?sk35jq"></script>
-	<script
-		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_tailwind-326cfbac0aac0a21b8bb152ff68ec3ef.js?sxfxx0"></script>
+
 </body>
 
 </html>
