feat(energy): switch to local js files

--- a/our-energy-mix-v2.htm
+++ b/our-energy-mix-v2.htm
@@ -754,8 +754,8 @@
 		</div>
 		</div>
 	</main>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-	<script src="./assets/js/charts.js"></script>
+	<script src="./assets/js/chart.umd.js"></script>
+	<script src="./assets/js/charts-energy-mix.js"></script>
 	<script src="./assets/js/map-energy-mix.js"></script>
 
 </body>
