feat(about-us): complete content update with new images and improved slider
- Update hero image to official about-us hero from live site
- Fix all navigation links (members, powering-future, energy-mix, podcast)
- Add YouTube video embeds for both video sections
- Add microphone icon to podcast link for consistency
- Replace employee testimonials with Michelle Pastor's content
- Add real images: Michelle Pastor portrait, Mesa Hotline worker, TSHQ headquarters, TS founders
- Update slider component to match current standards with CSS variables
- Improve slider mobile responsiveness and pagination positioning

--- a/about-us.htm
+++ b/about-us.htm
@@ -43,9 +43,9 @@
 		<div id="wrapper">
 			<div class="l-constrain--no-padding">
 				<!-- Hero -->
-				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
-					<img src="assets/images/linemen-meeting-1200x500.jpg" alt="Lineman at work"
-						class="absolute inset-0 w-full h-full object-cover object-left z-0" />
+				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 sm:min-h-[400px]">
+					<img src="https://tristate.coop/sites/default/files/revslider/image/aboutus_hero.jpg"
+						alt="Lineman at work" class="absolute inset-0 w-full h-full object-cover object-left z-0" />
 					<div
 						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 						<h1 class="text-4xl md:text-5xl font-serif text-balance">
@@ -63,13 +63,18 @@
 
 						<p>
 							Tri-State began as a not-for-profit association of electric co-ops in 1952 with the goal of
-							providing electricity to rural homes, businesses and farms across the West—and that’s still
+							providing electricity to rural homes, businesses and farms across the West—and that's still
 							what drives us today. In accordance with cooperative principles, our mission is to supply
-							our <a href="https://tristate.coop/member-list">member systems</a> with reliable, affordable
+							our <a href="https://tristate.coop/members">member systems</a> with reliable, affordable
 							and responsible electricity.
 
 						</p>
-						<p><a href="https://tristate.coop/powering-future">Learn how we’re keeping that promise</a>.</p>
+						<p>
+							<a href="https://tristate.coop/powering-the-future"
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
+								Learn how we're keeping that promise
+							</a>
+						</p>
 					</div>
 				</section>
 
@@ -98,9 +103,10 @@
 
 								</p>
 								<p>
-									<a href="https://tristate.coop/podcast-western-watts"
-										class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-black">
-										Listen to the podcast
+									<a href="https://tristate.coop/podcast-western-watts-safety-is-contagious"
+										class="inline-flex items-center gap-2 rounded-full border border-white border-solid pl-4 pr-6 py-2 font-normal text-white no-underline transition-transform">
+										<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full-white.svg"
+											alt="audio icon" class="h-6" />Listen to the podcast
 									</a>
 								</p>
 							</div>
@@ -114,9 +120,9 @@
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
 							<img src="assets/images/family-welcomes-new-baby-800x600.jpg" alt="Snocat video thumbnail"
 								class="absolute size-full object-cover" />
-							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
-								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-								class="relative">
+							<a href="https://www.youtube.com/embed/eK5_a57ABUc" data-featherlight="iframe"
+								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+								data-featherlight-iframe-width="500" class="relative">
 								<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 									alt="Play button" class="size-24 sm:size-44" />
 							</a>
@@ -138,7 +144,7 @@
 									power. As a co-op, we’re putting people first.
 								</p>
 								<p>
-									<a href="https://tristate.coop/operations"
+									<a href="https://tristate.coop/energy-mix"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
 										How we do it
 									</a>
@@ -153,45 +159,25 @@
 					<h2 class="font-serif font-light text-3xl">
 						The cooperative difference at work
 					</h2>
-					<div class="grid gap-y-12 mt-20 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
-						<div class="space-y-2">
-							<p><img src="https://placehold.co/200x200?text=Photo"
-									class="rounded-full size-24 sm:size-40" /></p>
-							<p class="text-xl font-bold">Firstname Lastname<br>Extremely Long Job Title</p>
+					<div class="flex justify-center mt-20">
+						<div class="space-y-2 max-w-md mx-auto">
+							<p><img src="https://tristate.coop/sites/default/files/images/michelle-pastor-170x170.jpg"
+									alt="Michelle Pastor, Relationship Manager"
+									class="rounded-full size-24 sm:size-40 mx-auto" /></p>
+							<p class="text-xl font-bold">Michelle Pastor<br>Relationship Manager</p>
 							<p>
-								“Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit. Quisque scelerisque a ante sit
-								amet eleifend. Etiam nec feugiat enim, eu
-								faucibus diam. Ut ac eleifend ex. Nunc eleifend
-								mauris ut posuere vehicula.”
+								"We really are like family. I have so many great friends in the cooperative world and
+								after each member visit, I feel energized. My favorite days are those that I spend with
+								our members!"
+							</p>
+							<p>
+								<a href="https://tristate.coop/people-behind-power" class="underline">Learn her
+									story</a>
 							</p>
 						</div>
 
-						<div class="space-y-2">
-							<p><img src="https://placehold.co/200x200?text=Photo"
-									class="rounded-full size-24 sm:size-40" /></p>
-							<p class="text-xl font-bold">Firstname Lastname<br>Extremely Long Job Title</p>
-							<p>
-								“Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit. Quisque scelerisque a ante sit
-								amet eleifend. Etiam nec feugiat enim, eu
-								faucibus diam. Ut ac eleifend ex. Nunc eleifend
-								mauris ut posuere vehicula.”
-							</p>
-						</div>
 
-						<div class="space-y-2">
-							<p><img src="https://placehold.co/200x200?text=Photo"
-									class="rounded-full size-24 sm:size-40" /></p>
-							<p class="text-xl font-bold">Firstname Lastname<br>Extremely Long Job Title</p>
-							<p>
-								“Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit. Quisque scelerisque a ante sit
-								amet eleifend. Etiam nec feugiat enim, eu
-								faucibus diam. Ut ac eleifend ex. Nunc eleifend
-								mauris ut posuere vehicula.”
-							</p>
-						</div>
+
 
 
 					</div>
@@ -201,11 +187,11 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/700x600?text=Hard+hat+guy" alt="Snocat video thumbnail"
-								class="absolute size-full object-cover" />
-							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
-								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-								class="relative">
+							<img src="https://tristate.coop/sites/default/files/images/mesa-hotline-ts-800x600.jpg"
+								alt="Mesa Hotline worker" class="absolute size-full object-cover" />
+							<a href="https://www.youtube.com/embed/65Lai7tKtvY" data-featherlight="iframe"
+								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+								data-featherlight-iframe-width="500" class="relative">
 								<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 									alt="Play button" class="size-24 sm:size-44" />
 							</a>
@@ -276,15 +262,17 @@
 
 
 				<!-- Slider -->
-				<section class="min-h-96 sm:min-h-[400px]"><!-- Slider main container -->
-					<div class="swiper h-[400px]">
+				<section class="min-h-96 sm:min-h-[400px]"
+					style="--swiper-theme-color: #3d4d55; --swiper-pagination-bottom: auto">
+					<!-- Slider main container -->
+					<div class="swiper h-[432px] pb-8">
 						<!-- Additional required wrapper -->
 						<div class="swiper-wrapper"><!-- Slides -->
-							<div class="swiper-slide aspect-video sm:w-2/3">
-
+							<div class="swiper-slide sm:w-2/3">
 								<figure class="relative w-full h-full">
-									<img src="https://placehold.co/600x400/37637c/FFF?text=Building"
-										alt="Line repair work" class="absolute h-full w-full object-cover">
+									<img src="https://tristate.coop/sites/default/files/images/tshq-800x400.jpg"
+										alt="Tri-State headquarters in Westminster, CO"
+										class="absolute h-full w-full object-cover">
 									<figcaption
 										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
 										Tri-State headquarters in Westminster, CO
@@ -292,8 +280,8 @@
 								</figure>
 							</div>
 
-							<div class="swiper-slide h-full w-auto bg-gray px-20">
-								<div class=" h-full grid size-full place-content-center">
+							<div class="swiper-slide h-full bg-gray sm:w-2/3">
+								<div class="h-full grid size-full place-content-center px-8 box-border">
 									<p class="text-3xl font-light font-serif">
 										The cooperative principles
 									</p>
@@ -310,26 +298,21 @@
 								</div>
 							</div>
 
-							<div class="swiper-slide aspect-video sm:w-2/3">
+							<div class="swiper-slide sm:w-2/3">
 								<figure class="relative w-full h-full">
-									<img src="https://placehold.co/600x400/37637c/FFF?text=Photo+of+members"
-										alt="Line repair work" class="absolute h-full w-full object-cover">
+									<img src="https://tristate.coop/sites/default/files/images/ts-founders-800x400.jpg"
+										alt="Founding members of Tri-State" class="absolute h-full w-full object-cover">
 									<figcaption
 										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
-										Founding members in ...(need the rest)
+										Founding members of Tri-State
 									</figcaption>
 								</figure>
 							</div>
 						</div>
-						<!-- If we need pagination -->
 
-						<div class="swiper-pagination">&nbsp;</div>
-						<!-- If we need navigation buttons -->
-
+						<div class="swiper-pagination h-8">&nbsp;</div>
 						<div class="swiper-button-prev">&nbsp;</div>
-
 						<div class="swiper-button-next">&nbsp;</div>
-						<!-- If we need scrollbar --><!-- <div class="swiper-scrollbar">&nbsp;</div> -->
 					</div>
 				</section>
 
