--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
 						<dd class="text-sm text-slate-500">June 28, 2025</dd>
 					</div>
 					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./our-energy-mix-v2.htm" target="_blank"
+						<dt class="text-slate-500"><a href="./our-energy-mix.htm" target="_blank"
 								class="text-slate-900 hover:underline">Energy Mix</a></dt>
 						<dd class="text-sm text-slate-500">June 28, 2025</dd>
 					</div>
