feat(swiper): change to global vars

--- a/about-us.htm
+++ b/about-us.htm
@@ -262,8 +262,7 @@
 
 
 				<!-- Slider -->
-				<section class="min-h-96 sm:min-h-[400px]"
-					style="--swiper-theme-color: #3d4d55; --swiper-pagination-bottom: auto">
+				<section class="min-h-96 sm:min-h-[400px]">
 					<!-- Slider main container -->
 					<div class="swiper h-[432px] pb-8">
 						<!-- Additional required wrapper -->
