--- a/about-us.htm
+++ b/about-us.htm
@@ -43,7 +43,8 @@
 		<div id="wrapper">
 			<div class="l-constrain--no-padding">
 				<!-- Hero -->
-				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 sm:min-h-[400px]">
+				<section
+					class="relative flex flex-col justify-center min-h-[50vh] z-0 sm:min-h-[400px] lg:min-h-[500px]">
 					<img src="https://tristate.coop/sites/default/files/revslider/image/aboutus_hero.jpg"
 						alt="Lineman at work" class="absolute inset-0 w-full h-full object-cover object-left z-0" />
 					<div
